--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "project-a/acl-bundle",
+    "name": "msi/acl-bundle",
     "type": "symfony-bundle",
     "description": "Providing an easy way to work with the Symfony Security Acl.",
     "keywords": ["symfony2", "acl", "security"],
@@ -14,16 +14,16 @@
     "require": {
         "php": ">=5.3.0",
         "doctrine/common": "~2.2",
-        "symfony/framework-bundle": "~2.3",
-        "symfony/security": "~2.3"
+        "symfony/framework-bundle": "~3.0",
+        "symfony/security": "~3.0"
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "~1.0",
+        "doctrine/doctrine-bundle": "~1.6.*",
         "doctrine/orm": "~2.2",
-        "symfony/browser-kit": "~2.3",
-        "symfony/expression-language": "~2.4",
-        "symfony/finder": "~2.3",
-        "symfony/security-bundle": "~2.3"
+        "symfony/browser-kit": "~3.0",
+        "symfony/expression-language": "~3.0",
+        "symfony/finder": "~3.0",
+        "symfony/security-bundle": "~3.0"
     },
     "suggest": {
         "doctrine/orm": "Allows you to remove Acl entries automatically. (When using ORM for Acl)",
