--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony/security": "~3.0"
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "~1.6.*",
+        "doctrine/doctrine-bundle": "1.6.*",
         "doctrine/orm": "~2.2",
         "symfony/browser-kit": "~3.0",
         "symfony/expression-language": "~3.0",
