--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "msi/acl-bundle",
+    "name": "ahmed-ghiloubi/acl-bundle",
     "type": "symfony-bundle",
     "description": "Providing an easy way to work with the Symfony Security Acl.",
-    "keywords": ["symfony2", "acl", "security"],
+    "keywords": ["symfony4", "acl", "security"],
     "license": "MIT",
     "authors": [
         {
@@ -12,18 +12,18 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "doctrine/common": "~2.2",
-        "symfony/framework-bundle": "~3.0",
-        "symfony/security": "~3.0"
+        "php": ">=7.2.0",
+        "symfony/framework-bundle": "^4.0",
+        "doctrine/common": "^2.12",
+        "symfony/security": "^4.4"
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "1.6.*",
-        "doctrine/orm": "~2.2",
-        "symfony/browser-kit": "~3.0",
-        "symfony/expression-language": "~3.0",
-        "symfony/finder": "~3.0",
-        "symfony/security-bundle": "~3.0"
+        "doctrine/doctrine-bundle": "^2.0",
+        "doctrine/orm": "^2.7",
+        "symfony/browser-kit": "^4.0",
+        "symfony/expression-language": "^4.0",
+        "symfony/finder": "^4.0",
+        "symfony/security-bundle": "^4.0"
     },
     "suggest": {
         "doctrine/orm": "Allows you to remove Acl entries automatically. (When using ORM for Acl)",
@@ -34,7 +34,7 @@
     },
     "extra": {
        "branch-alias": {
-           "dev-master": "1.0.x-dev"
+           "master": "4.0"
         }
     }
 }
