--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "extra": {
        "branch-alias": {
-           "master": "4.0"
+           "dev-master": "4.0-dev"
         }
     }
 }
